BUG#13136 NdbTCP.cpp compile failure on OSX 10.2

use select if poll is unavailable.


ndb/src/common/portlib/NdbTCP.cpp:
  Implement Ndb_check_socket_hup for systems without poll(2)
ndb/src/common/portlib/win32/NdbTCP.c:
  fix typo (found while fixing this bug)